# talent-plan

courses/rust/building-blocks/bb-1/meow/: .env  Cargo.toml  output.txt
courses/rust/building-blocks/bb-1/meow/src/: cli.yml  main.rs
courses/rust/projects/my-project-1/kvs/: Cargo.toml
courses/rust/projects/my-project-1/kvs/src/: kv.rs  lib.rs
