[package]
name = "kvs"
version = "0.1.0"
authors = ["tianyu94 <tianyu94@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
dotenv_codegen = "0.15.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
